--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0"
+    "@azure/functions": "^4.0.0",
+    "node-fetch": "^2.6.1",
+    "cheerio": "^1.0.0-rc.10"
   },
   "devDependencies": {},
   "main": "src/{index.js,functions/*.js}"
